# finance

./: .gitignore  AGENTS.md  README.md  config.toml  docker-compose.yml  findings.md  init.sql  init_v2.sql  pyproject.toml  pytest.ini  requirements.txt  run.py  test.py  test_fred_api.py
.sisyphus/plans/: db-flatten-migration.md
doc/: fix_plan.md
docker/: backup-db.sh  containers.json  info.sh  manage.sh  restore-db.sh
docker/backups/: fcli_schema_20260227.sql  fcli_schema_20260305_130257.sql
docs/: db_refactor_plan.md  postgres_migration_design.md  refactoring_design.md
fcli/: __init__.py  main.py
fcli/cli/commands/: __init__.py  asset.py  forex.py  market.py  quote.py  search.py
fcli/commands/: __init__.py  asset.py  fx.py  gold.py  gpr.py  index.py  market.py  quote.py  search.py  watchlist.py
fcli/core/: __init__.py  cache.py  cache_strategy.py  code_mapper.py  config.py  container.py  database.py  datasource_config.py  exceptions.py  factories.py  models.py  storage.py
fcli/core/interfaces/: __init__.py  cache.py  database.py  http.py  source.py  storage.py
fcli/core/models/: __init__.py  asset.py  base.py  fund.py  gold.py  gold_supply_demand.py  gpr.py  log.py
fcli/core/stores/: __init__.py  base.py  exchange_rate.py  exchange_rate_fact.py  fund.py  gold.py  gold_supply_demand.py  gpr.py  log.py  (+3 more)
fcli/infra/: http_client.py
fcli/providers/: fetcher.py  search.py
fcli/scripts/: __init__.py  import_spdr_cache.py  import_wgc_data.py  migrate.py  migrate_cache_to_pg.py  migrate_mysql_to_pg.py  migrate_v2.py  migrate_v3.py  migrate_watchlist.py  save_all_gold_reserves.py  save_gold_reserves.py
fcli/services/: __init__.py  forex_service.py  fund_service.py  gold_reserve_service.py  gold_service.py  gold_supply_demand_service.py  gpr_service.py  index_service.py  quote_service.py  spdr_service.py  watchlist_service.py
fcli/sources/: base.py  eastmoney.py  eastmoney_list.py  factory.py  gold.py  sina.py
fcli/utils/: base_presenter.py  calc.py  command.py  currency.py  fund_presenter.py  gold_presenter.py  logger.py  presenter.py  quote_presenter.py  time_util.py
scripts/: backup_baseline.sh  check_dim_tables.py  check_quote_fx_tables.py  check_table_structure.py  execute_phase1_migration.py  setup_baseline.py  test_phase1_store.py
tests/: conftest.py
tests/integration/: test_commands.py
tests/unit/: conftest.py  test_fx_cmd.py  test_gold_cmd.py  test_gold_store.py  test_gpr_cmd.py  test_gpr_store.py  test_market_cmd.py  test_watchlist_cmd.py
thoughts/ledgers/: CONTINUITY_ses_2c28.md  CONTINUITY_ses_2c30.md  CONTINUITY_ses_2fae.md  CONTINUITY_ses_33e6.md  CONTINUITY_ses_342c.md  CONTINUITY_ses_3434.md  CONTINUITY_ses_3626.md  DB_REFACTOR_PLAN_2026-03-26.md
(+18 files in other folders)
