[project]
name = "fcli"
version = "0.2.0"
description = "Command-line financial tool for stock/forex/gold tracking - Now with PostgreSQL!"
authors = [
    {name = "User"}
]
requires-python = ">=3.10"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "akshare>=1.11.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "xlrd>=2.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fcli*"]
exclude = ["tests*", "data*", "docker*"]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["fcli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
